<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddCropUrduActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/uploadImageUrdu"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/upload"
            android:layout_margin="20dp"/>

        <Button
            android:id="@+id/btnBrowseUrdu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textAllCaps="false"
            android:text="@string/browsePicInUrdu" />

        <EditText
            android:id="@+id/edTitleUrdu"
            android:layout_width="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/cropTitleUrdu"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/edDescriptionUrdu"
            android:hint="@string/cropDetailUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:id="@+id/edTempUrdu"
            android:hint="@string/cropTempUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edSoilUrdu"
            android:hint="@string/cropSoilConditionsUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edVarietyUrdu"
            android:hint="@string/cropVarietyUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edSowingUrdu"
            android:hint="@string/cropSowingUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edSeedRateUrdu"
            android:hint="@string/cropSeedRateUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edFertilizerUrdu"
            android:hint="@string/cropFertilizerUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edIrrigationUrdu"
            android:hint="@string/cropIrrigationUrdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />
        <EditText
            android:id="@+id/edHarvestingUrdu"
            android:hint="@string/cropHarvestingUdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="top|right"
            android:inputType="textMultiLine"
            android:lines="30"
            android:maxLines="10"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:layout_marginBottom="15dp"/>
        />

        <Button
            android:id="@+id/btnBrowseAudioUrdu"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:text="@string/browseAudioUrdu" />



            <Button
                android:id="@+id/btnUploadCropUrdu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:text="@string/uploadCropDetailsUrdu" />

            <Button
                android:id="@+id/btnRetrieveCropUrdu"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_margin="10dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="فصل کی تفصیلات دکھائیں۔" />





    </LinearLayout>

</ScrollView>